--- a/style.css
+++ b/style.css
@@ -19,12 +19,19 @@ body {
     
     box-shadow: 0 0 20px 6px #cfbcb6;
 }
-@media (max-width: 800px) {
+@media (max-width: 980px) {
     .box-form{
         flex-flow: wrap;
         align-content: center;
         text-align: center;
         align-items: center;
+    }
+    .box-form .left .overlay h1 {
+    font-size: 6vmax;
+    }
+
+    .facebook, .twitter, .linkedin {
+        margin: 10px 0
     }
     
 }
@@ -73,7 +80,7 @@ body {
     border-top: auto;
     border-bottom: auto;
 }
-@media (max-width: 720px) {
+@media (max-width: 980px) {
     .box-form .right {
         width: 100%;
     }
